ad background color to body, fix plx gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
   --main-frame-color: rgb(240, 240, 240);
   --link-hover-color: rgb(83, 166, 106);
   --chat-bubble-color: rgb(107, 119, 141);
-  --portfolio-bg-color: rgb(252, 251, 251);
+  --portfolio-bg-color: rgb(243, 243, 243);
   /* --portfolio-bg-color: rgb(56, 56, 56); */
 }
 
@@ -32,11 +32,15 @@ body {
   font-family: "Space_Mono";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--portfolio-bg-color);
 }
 
 /* ------------------------------------------------------------------ */
 /* Welcome section
  ------------------------------------------------------------------ */
+#container {
+  /* background: var(--portfolio-bg-color); */
+}
 
 #welcome {
   position: relative;
